--- a/templates/index_layout.html
+++ b/templates/index_layout.html
@@ -5,27 +5,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}{% endblock %}: Real Forum</title>
+  <title>{% block title %}{% endblock %}: Group Chat</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/discussion.css') }}">
   <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/webtitle.ico') }}">
 </head>
 
 <body>
   <nav>
-    <h2 class="logo">Real Forum</h2>
-    <div class="bars">
-      <i class="fa fa-bars"></i>
+    <div class="nav-container">
+      <h2 class="logo">Group Chat</h2>
+      <button class="bars" onclick="toggleNav()">
+        <i class="fa fa-bars"></i>
+      </button>
+      <ul class="nav-links">
+        <li class="nav-link"><a href="/home">Home</a></li>
+        <li class="nav-link"><a href="/group_ops">Groups</a></li>
+        <li class="nav-link"><a href="/profile">Profile</a></li>
+        <li class="nav-link auth"><a href="/logout">Log Out</a></li>
+      </ul>
     </div>
-    <ul class="nav-links">
-      <li class="nav-link"><a href="/home">Home</a></li>
-      <li class="nav-link"><a href="/group_ops">Groups</a></li>
-      <li class="nav-link"><a href="/profile">Profile</a></li>
-      <!-- <li class="nav-link auth"><a href="#">Register</a></li> -->
-      <li class="nav-link auth"><a href="/logout">Log Out</a></li>
-    </ul>
   </nav>
-  <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
+  <script>
+    function toggleNav() {
+      document.querySelector('nav').classList.toggle('active');
+    }
+  </script>
+
   {% block index_layout %}
   {% endblock %}
 </body>
