--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,96 +1,137 @@
 {% extends "base.html" %}
 
 {% block title %}
-: SignUp
+: Sign Up
 {% endblock %}
 
 {% block bodyContent %}
-<div class="center-block">
-  <form action="/signup" method="post">
-    <div class="imgcontainer">
-      <img src="{{url_for('static', filename='images/webtitle.ico')}}" alt="Sabko Kitab" class="avatar">
+<link rel="stylesheet" href="{{url_for('static', filename='css/auth.css')}}">
+
+<div class="auth-wrapper">
+  <div class="auth-container">
+    <div class="auth-header">
+      <img src="{{url_for('static', filename='images/webtitle.ico')}}" alt="Group Chat">
+      <h1>Create Account</h1>
+      <p>Join our community and start chatting</p>
     </div>
-    <div class="container">
-      <div>
-        <h1>Sign Up</h1>
-        <p>Please fill in this form to create an account.</p>
-        <hr>
-      </div>
-      <div>
 
-        <label for="firstname"><b>First Name</b></label>
-        <input type="text" placeholder="Enter First Name" name="firstname" required>
+    <form action="/signup" method="post" class="auth-form">
+      {{ form.hidden_tag() }}
 
-        <label for="middlename"><b>Middle Name</b></label>
-        <input type="text" placeholder="Enter Middle Name" name="middlename">
-
-        <label for="lastname"><b>Last Name</b></label>
-        <input type="text" placeholder="Enter Last Name" name="lastname" required>
-
-        <label for="gender"><b>Gender</b></label>
-        <div>
-          <input type="radio" id="male" name="gender" value="male" required>
-          <label for="male">Male</label>
-        </div>
-        <div>
-          <input type="radio" id="female" name="gender" value="female" required>
-          <label for="female">Female</label>
-        </div>
-        <div>
-          <input type="radio" id="other" name="gender" value="other" required>
-          <label for="other">Other</label>
+      <div class="form-row">
+        <div class="form-group">
+          <label for="firstname">First Name</label>
+          {{ form.firstname(placeholder="John") }}
+          {% if form.firstname.errors %}
+          <div class="error-message">
+            {% for error in form.firstname.errors %}<p>{{ error }}</p>{% endfor %}
+          </div>
+          {% endif %}
         </div>
 
-
-        <label for="dob"><b>Date of Birth</b></label>
-        <input type="date" placeholder="YYYY-MM-DD" name="dob" required>
-
-        <label for="email"><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" name="email" required>
-
-        <label for="username"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="username" required>
-
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="password" required minlength="8"
-          autocomplete="new-password">
-
-        <label for="psw-repeat"><b>Repeat Password</b></label>
-        <input type="password" placeholder="Repeat Password" name="psw-repeat" required minlength="8"
-          autocomplete="new-password">
-        <div id="password-error" style="display: none; color: red;">Password must be at least 8 characters long.</div>
-
-
-        <script>
-          const passwordInput = document.getElementById('password');
-          const passwordRepeatInput = document.getElementById('password-repeat');
-
-          passwordInput.addEventListener('input', validatePassword);
-          passwordRepeatInput.addEventListener('input', validatePassword);
-
-          function validatePassword() {
-            if (passwordInput.value.length < 8 || passwordRepeatInput.value.length < 8) {
-              passwordRepeatInput.setCustomValidity('Passwords must be at least 8 characters long.');
-            } else if (passwordInput.value !== passwordRepeatInput.value) {
-              passwordRepeatInput.setCustomValidity('Passwords must match.');
-            } else {
-              passwordRepeatInput.setCustomValidity('');
-            }
-          }
-        </script>
-        <label>
-          <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-        </label>
+        <div class="form-group">
+          <label for="middlename">Middle Name</label>
+          {{ form.middlename(placeholder="Optional") }}
+          {% if form.middlename.errors %}
+          <div class="error-message">
+            {% for error in form.middlename.errors %}<p>{{ error }}</p>{% endfor %}
+          </div>
+          {% endif %}
+        </div>
       </div>
 
-      <p>By creating an account you agree to our <a href="/terms-and-conditions" style="color:dodgerblue">Terms &
-          Privacy</a>.</p>
-
-      <div class="clearfix">
-        <button type="submit" class="signupbtn">Sign Up</button>
+      <div class="form-group">
+        <label for="lastname">Last Name</label>
+        {{ form.lastname(placeholder="Doe") }}
+        {% if form.lastname.errors %}
+        <div class="error-message">
+          {% for error in form.lastname.errors %}<p>{{ error }}</p>{% endfor %}
+        </div>
+        {% endif %}
       </div>
+
+      <div class="form-group">
+        <label>Gender</label>
+        <div class="radio-group">
+          {% for subfield in form.gender %}
+          <div class="radio-item">
+            {{ subfield }}
+            {{ subfield.label }}
+          </div>
+          {% endfor %}
+        </div>
+        {% if form.gender.errors %}
+        <div class="error-message">
+          {% for error in form.gender.errors %}<p>{{ error }}</p>{% endfor %}
+        </div>
+        {% endif %}
+      </div>
+
+      <div class="form-group">
+        <label for="dob">Date of Birth</label>
+        {{ form.dob() }}
+        {% if form.dob.errors %}
+        <div class="error-message">
+          {% for error in form.dob.errors %}<p>{{ error }}</p>{% endfor %}
+        </div>
+        {% endif %}
+      </div>
+
+      <div class="form-row">
+        <div class="form-group">
+          <label for="email">Email</label>
+          {{ form.email(type="email", placeholder="john@example.com") }}
+          {% if form.email.errors %}
+          <div class="error-message">
+            {% for error in form.email.errors %}<p>{{ error }}</p>{% endfor %}
+          </div>
+          {% endif %}
+        </div>
+
+        <div class="form-group">
+          <label for="username">Username</label>
+          {{ form.username(placeholder="johndoe") }}
+          {% if form.username.errors %}
+          <div class="error-message">
+            {% for error in form.username.errors %}<p>{{ error }}</p>{% endfor %}
+          </div>
+          {% endif %}
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-group">
+          <label for="password">Password</label>
+          {{ form.password(placeholder="Min 8 characters") }}
+          {% if form.password.errors %}
+          <div class="error-message">
+            {% for error in form.password.errors %}<p>{{ error }}</p>{% endfor %}
+          </div>
+          {% endif %}
+        </div>
+
+        <div class="form-group">
+          <label for="password_repeat">Confirm Password</label>
+          {{ form.password_repeat(placeholder="Repeat password") }}
+          {% if form.password_repeat.errors %}
+          <div class="error-message">
+            {% for error in form.password_repeat.errors %}<p>{{ error }}</p>{% endfor %}
+          </div>
+          {% endif %}
+        </div>
+      </div>
+
+      <p class="terms-text">
+        By creating an account you agree to our
+        <a href="/terms-and-conditions">Terms & Privacy</a>
+      </p>
+
+      <button type="submit" class="submit-btn">Create Account</button>
+    </form>
+
+    <div class="auth-footer">
+      <p>Already have an account? <a href="/login">Log in</a></p>
     </div>
-  </form>
-  <p>Already have account <a href="/login">Log in?</a></p>
+  </div>
 </div>
 {% endblock %}
