--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,21 @@
 </head>
 
 <body>
+    <!-- Flash messages -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <div class="flash-messages-container">
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }}">
+            {{ message }}
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
+
     {% block bodyContent %}
     {% endblock %}
 </body>
+
 </html>
